# duku

./: .gitignore  CHANGELOG.md  Cargo.toml  DC_DOCS.md  LICENSE  README.md  build.rs  import-shaders.bat
dai/: Cargo.toml
dai/src/: error.rs  main.rs  watch.rs
dai/src/cubemap/: import.rs  mod.rs
dai/src/font/: bitmap.rs  diamond_iterator.rs  import.rs  mod.rs  sdf.rs
dai/src/image/: import.rs  mod.rs
dai/src/shader/: import.rs  mod.rs
draw-it/: Cargo.toml  build.rs
draw-it/fonts/: kenney-future.font
draw-it/shaders/: bitmap-font.shader  blit.shader  font.shader  lines.shader  lines.spirv  phong.shader  phong.spirv  sdf-font.shader  sdf-font.spirv  shadow-blur.shader  shadow.shader  shadow.spirv  skybox.shader  skybox.spirv  ui.shader  ui.spirv  unshaded.shader  wireframe.shader
draw-it/shaders/glsl/: bitmap-font.glsl  blit.glsl  internal-shadow.glsl  internal-vert.glsl  lines.glsl  phong.glsl  sdf-font.glsl  shadow-blur.glsl  shadow.glsl  skybox.glsl  ui.glsl  unshaded.glsl  wireframe.glsl
draw-it/src/: color.rs  context.rs  controller.rs  error.rs  glsl.rs  lib.rs  macros.rs  profiler.rs  quality.rs  stats.rs  ui.rs  vk.rs  watch.rs  window.rs
draw-it/src/buffer/: dynamic.rs  fixed.rs  memory.rs  mod.rs  properties.rs
draw-it/src/camera/: controller.rs  mod.rs
draw-it/src/device/: commands.rs  extension.rs  mod.rs  pick.rs  properties.rs
draw-it/src/font/: format.rs  json.rs  mod.rs
draw-it/src/image/: cubemap.rs  framebuffer.rs  memory.rs  mod.rs  properties.rs  texture.rs
draw-it/src/instance/: extension.rs  layer.rs  mod.rs  properties.rs  validator.rs  version.rs
draw-it/src/math/: matrix_4.rs  mod.rs  quaternion.rs  sphere.rs  transform.rs  utils.rs  vector_2.rs  vector_3.rs  vector_4.rs
draw-it/src/mesh/: mod.rs  vertex.rs
draw-it/src/pipeline/: attachment.rs  layout.rs  material.rs  mod.rs  properties.rs  render_pass.rs  sampler.rs  shader.rs  uniform.rs  uniform_data.rs
draw-it/src/renderer/: camera.rs  forward.rs  forward_renderer.rs  light.rs  mod.rs  stats.rs  target.rs  ui_renderer.rs
draw-it/src/resource/: Index.rs  builtin.rs  hash.rs  mod.rs  reference.rs  storage.rs
draw-it/src/storage/: Index.rs  builtin.rs  mod.rs
draw-it/src/surface/: handle.rs  mod.rs  properties.rs  swapchain.rs
draw-it/src/sync/: fence.rs  mod.rs  semaphore.rs
draw-it/src/window/: controller.rs  mod.rs
import/: Cargo.toml
import/glsl/: frag.glsl  objects.glsl  phong.glsl  shadow.glsl  srgb.glsl  vert.glsl
import/src/: bitmap.rs  diamond_iterator.rs  error.rs  font.rs  macros.rs  main.rs  sdf.rs  shader.rs  watch.rs
tegne/: Cargo.toml  build.rs  compile-assets.py
tegne-import/: Cargo.toml  build.rs
tegne-import/glsl/: frag-d.glsl  frag.glsl  objects.glsl  phong.glsl  vert.glsl
tegne-import/src/: error.rs  font.rs  main.rs  sdf.rs  shader.rs
tegne-import/src/glsl/: frag-d.glsl  objects.glsl  vert.glsl
tegne/assets/fonts/: NotoSans-Bold.font
tegne/assets/fonts/msdf/: atlas.json  props.json
tegne/assets/shaders/: blit.shader  font.shader  passthru.shader  phong.shader  shadow.shader  ui.shader  unshaded.shader  wireframe.shader
tegne/assets/shaders/glsl/: blit.glsl  font.glsl  objects.glsl  passthru.glsl  phong.glsl  shadow.glsl  ui.glsl  unshaded.glsl  (+1 more)
tegne/fonts/: RobotoMono-Regular.font
tegne/shaders/: font.shader  frag.glsl  passthru.frag  passthru.vert  phong.frag  phong.shader  shadow.frag  shadow.shader  shadow.vert  ui.shader  unshaded.shader  vert.glsl  wireframe.frag  wireframe.shader  world.vert
tegne/shaders/glsl/: font.glsl  phong.glsl  shadow-blur.glsl  shadow.glsl  ui.glsl  wireframe.glsl
tegne/src/: context.rs  error.rs  lib.rs  macros.rs  tegne.rs  thread_kill.rs  ui.rs  utils.rs
tegne/src/buffer/: buffer_type.rs  copy.rs  dynamic.rs  dynamic_buffer.rs  fixed.rs  fixed_buffer.rs  memory.rs  mod.rs  properties.rs
tegne/src/buffers/: buffer.rs  dynamic_buffer.rs  mod.rs
tegne/src/builtins/: font.rs  material.rs  mesh.rs  mod.rs  shader.rs
tegne/src/camera/: controller.rs  mod.rs
tegne/src/cmd/: command_recorder.rs  mod.rs
tegne/src/color/: colors.rs  mod.rs
tegne/src/commands/: command_recorder.rs
tegne/src/device/: commands.rs  extension.rs  mod.rs  pick.rs  properties.rs
tegne/src/font/: json.rs  mod.rs
tegne/src/image/: framebuffer.rs  memory.rs  mod.rs  properties.rs  texture.rs
tegne/src/images/: attachment.rs  font.rs  framebuffer.rs  image.rs  layout_change.rs  mod.rs  sampler.rs  texture.rs
tegne/src/instance/: command_recorder.rs  commands.rs  device.rs  extension.rs  extensions.rs  layer.rs  mod.rs  surface.rs  swapchain.rs  target.rs  tegne.rs  thread_kill.rs  validator.rs  vulkan.rs  window_surface.rs
tegne/src/math/: matrix_4.rs  mod.rs  sphere.rs  utils.rs  vector_3.rs  vector_4.rs
tegne/src/memory/: alloc.rs  copy.rs  mod.rs
tegne/src/mesh/: mod.rs  vertex.rs
tegne/src/model/: builtin.rs  camera.rs  material.rs  mesh.rs  mod.rs  vertex.rs
tegne/src/objects/: builtin_font.rs  builtin_fonts.rs  builtin_material.rs  builtin_materials.rs  builtin_mesh.rs  builtin_meshes.rs  builtin_shader.rs  builtin_shaders.rs  builtin_texture.rs  builtin_textures.rs  builtins.rs  mod.rs
tegne/src/pipeline/: attachment.rs  layout.rs  material.rs  mod.rs  properties.rs  render_pass.rs  sampler.rs  shader.rs  uniform.rs  uniform_data.rs
tegne/src/profiler/: mod.rs  writer.rs
tegne/src/renderer/: forward_renderer.rs  mod.rs  stats.rs  target.rs  ui_renderer.rs
tegne/src/resource/: builtin.rs  mod.rs  reference.rs
tegne/src/shaders/: attachment.rs  material.rs  mod.rs  render_pass.rs  sampler.rs  shader.rs  shader_layout.rs  shader_objects.rs
tegne/src/surface/: camera.rs  framebuffer.rs  mod.rs  order.rs  properties.rs  render_pass.rs  swapchain.rs  ui.rs  window.rs
tegne/src/sync/: fence.rs  mod.rs  semaphore.rs
tegne/src/tegne/: command_recorder.rs  device.rs  extensions.rs  gpu.rs  instance.rs  mod.rs  swapchain.rs  validator.rs  window_surface.rs
tegne/src/utils/: mod.rs
tegne/src/window/: handle.rs  mod.rs  properties.rs  surface.rs  swapchain.rs
(+287 files in other folders)
