[package]
name = "duku"
version = "0.1.0"
edition = "2018"

authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
license = "Apache 2.0"
description = "Easy to use rendering library for Rust"
homepage = "https://github.com/oberzs/duku"
repository = "https://github.com/oberzs/duku"
documentation = "https://docs.rs/duku"
readme = "README.md"
exclude = [
  "examples/*",
  ".github/*",
  "shaders/glsl/*"
]

[features]
default = []
png = ["png_dep"]
jpeg = ["jpeg_dep"]
gltf = ["gltf_dep", "png", "jpeg"]
glsl = ["glsl_dep"]
window = ["window_dep"]
log = []

[dependencies.window_dep]
package = "winit"
version = "0.23.0"
optional = true

[dependencies.png_dep]
package = "png"
version = "0.16.7"
optional = true

[dependencies.jpeg_dep]
package = "jpeg-decoder"
version = "0.1.20"
optional = true
default-features = false

[dependencies.glsl_dep]
package = "shaderc"
version = "0.7.0"
optional = true

[dependencies.gltf_dep]
package = "gltf"
version = "0.15.2"
optional = true
default-features = false
features = ["utils"]

[[bin]]
name = "dc"
path = "src/dc.rs"
required-features = ["glsl"]

[[example]]
name = "framebuffer"
required-features = ["window"]

[[example]]
name = "gltf"
required-features = ["window", "gltf"]

[[example]]
name = "hello"
required-features = ["window"]

[[example]]
name = "lines"
required-features = ["window"]

[[example]]
name = "materials"
required-features = ["window", "png"]

[[example]]
name = "shapes"
required-features = ["window"]

[[example]]
name = "surface"
required-features = ["window", "glsl"]

[[example]]
name = "text"
required-features = ["window"]

[[example]]
name = "textures"
required-features = ["window", "png", "jpeg"]
