[package]
name = "duku"
version = "0.2.0"
edition = "2018"

authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
license = "Apache-2.0"
description = "Easy to use rendering library for Rust"
homepage = "https://github.com/oberzs/duku"
repository = "https://github.com/oberzs/duku"
documentation = "https://docs.rs/duku"
readme = "README.md"
exclude = [
  "examples/screenshots/*",
  ".github/*",
  "shaders/glsl/*"
]

[features]
default = ["window"]
png = ["png_dep"]
jpeg = ["jpeg_dep"]
gltf = ["gltf_dep", "png", "jpeg"]
glsl = ["glsl_dep"]
window = ["window_dep"]
log = []

[dependencies.window_dep]
package = "winit"
version = "0.23.0"
optional = true

[dependencies.png_dep]
package = "png"
version = "0.16.7"
optional = true

[dependencies.jpeg_dep]
package = "jpeg-decoder"
version = "0.1.20"
optional = true
default-features = false

[dependencies.glsl_dep]
package = "shaderc"
version = "0.7.0"
optional = true

[dependencies.gltf_dep]
package = "gltf"
version = "0.15.2"
optional = true
default-features = false
features = ["utils"]

[[bin]]
name = "dc"
path = "src/dc.rs"
required-features = ["glsl"]

[[example]]
name = "rotating_cube"
path = "examples/3d-examples/rotating_cube.rs"
required-features = ["window"]

[[example]]
name = "raymarch"
path = "examples/3d-examples/raymarch.rs"
required-features = ["window", "glsl"]

[[example]]
name = "run_animation"
path = "examples/2d-examples/run_animation.rs"
required-features = ["window", "png"]

[[example]]
name = "gradient_squares"
path = "examples/2d-examples/gradient_squares.rs"
required-features = ["window"]
