[package]
name = "dai"
version = "0.1.0"
authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
bincode = "1.3.1"

# Shader compilation
shaderc = "0.6.2"

# Font compilation
rusttype = "0.9.2"

# Image compilation
png = { version = "0.16.7", default-features = false }
