[package]
name = "draw-it"
version = "0.1.0"
authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
edition = "2018"

[features]
default = ["controller", "image", "ui", "hot-reload"]
profiler = ["lazy_static"]
image = ["image_file"]
window = ["winit"]
controller = ["window"]
ui = ["window", "imgui", "imgui-winit-support"]
hot-reload = ["notify"]

[dependencies]
ash = "0.31.0"
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"

# optional dependencies
image_file = { package = "image", version = "0.23.8", default-features = false, features = ["png"], optional = true }
winit = { version = "0.22.2", optional = true }
imgui = { version = "0.4.0", optional = true }
imgui-winit-support = { version = "0.4.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
notify = { version = "4.0.15", optional = true }

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi"] }

# MacOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.23.0"
metal = "0.20.0"
