[package]
name = "draw-it"
version = "0.1.0"
authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
edition = "2018"

[features]
default = ["image", "ui"]
image = ["png"]
window = ["glfw"]
ui = ["window", "imgui"]

[dependencies]
ash = "0.31.0"
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"

# optional dependencies
png = { version = "0.16.7", default-features = false, optional = true }
glfw = { version = "0.39.1", optional = true }
imgui = { version = "0.4.0", optional = true }

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi"] }

# MacOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.23.0"
metal = "0.20.0"
