[package]
name = "draw-it"
version = "0.1.0"
authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
edition = "2018"

[features]
default = ["ui"]
window = ["glfw"]
ui = ["window", "imgui"]

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
bincode = "1.3.1"

# optional dependencies
glfw = { version = "0.39.1", optional = true }
imgui = { version = "0.4.0", optional = true }

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi"] }

# MacOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.23.0"
metal = "0.20.0"
