[package]
name = "import"
version = "0.1.0"
authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
edition = "2018"

[dependencies]
shaderc = "0.6.2"
clap = "2.33.0"
tar = "0.4.26"
image = { version = "0.23.4", features = ["png"] }
spiral = "0.1.9"
rusttype = "0.9.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
indicatif = "0.14.0"
notify = "5.0.0-pre.2"
crossbeam-channel = "0.4.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"
regex = "1.3.7"