[package]
name = "tegne"
version = "0.1.0"
authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
edition = "2018"

[dependencies]
ash = "0.30.0"
log = "0.4.8"
tegne-math = { path = "../tegne-math", version = "0.1.0" }

tegne-utils = { path = "../tegne-utils", version = "0.1.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["libloaderapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20.0"
metal = "0.18.0"

[features]
default = ["tegne-utils"]