[package]
name = "tegne"
version = "0.1.0"
authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
edition = "2018"

[package.metadata.commands]
shaders = "python ./compile-assets.py shaders"
fonts = "python ./compile-assets.py fonts"

[dependencies]
ash = "0.30.0"
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
tar = "0.4.26"
image = { version = "0.23.4", default-features = false, features = ["png"] }
notify = "5.0.0-pre.2"
tegne-math = { path = "../tegne-math", version = "0.1.0" }
tegne-utils = { path = "../tegne-utils", version = "0.1.0", optional = true }
crossbeam = "0.7.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["libloaderapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20.0"
metal = "0.18.0"

[features]
default = ["tegne-utils"]