[package]
name = "tegne"
version = "0.1.0"
authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
edition = "2018"

[features]
default = ["controller", "image", "window", "ui"]
image = ["image_file"]
window = ["winit"]
controller = ["window"]
ui = ["window", "imgui"]

[dependencies]
ash = "0.30.0"
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
tar = "0.4.26"
notify = "5.0.0-pre.2"
crossbeam = "0.7.3"

# optional dependencies
image_file = { package = "image", version = "*", optional = true }
winit = { version = "*", optional = true }
imgui = { version = "*", optional = true }

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["libloaderapi"] }

# MacOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20.0"
metal = "0.18.0"
